--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+<meta property="og:type" content="website">
+<meta property="og:title" content="TapValues">
+<meta property="og:description" content="Tap Simulator Valuelist by NotSpeedGuy and Astarte!">
+<meta property="og:image" content="Your img you want will be here">
+<meta name="theme-color" content="#6f4cff">
+
+
 *{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;text-decoration:none}
 
 a:link{color:rgb(242,245,242);text-decoration:none}
@@ -734,5 +741,6 @@ box-shadow: 0 0 8px rgba(155, 92, 255, 0.35);
   color: #aaa;
   user-select: none;
 }
+
 
 
